--- a/eval.ipynb
+++ b/eval.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Aninda\\miniconda3\\envs\\geo-clip\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\anind\\miniforge3\\envs\\geo-clip\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -25,7 +25,7 @@
     "from config import cfg\n",
     "\n",
     "from geo_clip import GeoCLIP, img_val_transform\n",
-    "from dataset.dataset import GeoCLIPDataModule"
+    "from dataset.dataset import GeoCLIPDataset"
    ]
   },
   {
@@ -60,9 +60,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GeoCLIP(\n",
+       "  (image_encoder): ImageEncoder(\n",
+       "    (clip_model): CLIPModel(\n",
+       "      (text_model): CLIPTextTransformer(\n",
+       "        (embeddings): CLIPTextEmbeddings(\n",
+       "          (token_embedding): Embedding(49408, 768)\n",
+       "          (position_embedding): Embedding(77, 768)\n",
+       "        )\n",
+       "        (encoder): CLIPEncoder(\n",
+       "          (layers): ModuleList(\n",
+       "            (0-11): 12 x CLIPEncoderLayer(\n",
+       "              (self_attn): CLIPAttention(\n",
+       "                (k_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                (v_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                (q_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "                (out_proj): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              )\n",
+       "              (layer_norm1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "              (mlp): CLIPMLP(\n",
+       "                (activation_fn): QuickGELUActivation()\n",
+       "                (fc1): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "                (fc2): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "              )\n",
+       "              (layer_norm2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "        (final_layer_norm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "      )\n",
+       "      (vision_model): CLIPVisionTransformer(\n",
+       "        (embeddings): CLIPVisionEmbeddings(\n",
+       "          (patch_embedding): Conv2d(3, 1024, kernel_size=(14, 14), stride=(14, 14), bias=False)\n",
+       "          (position_embedding): Embedding(257, 1024)\n",
+       "        )\n",
+       "        (pre_layrnorm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "        (encoder): CLIPEncoder(\n",
+       "          (layers): ModuleList(\n",
+       "            (0-23): 24 x CLIPEncoderLayer(\n",
+       "              (self_attn): CLIPAttention(\n",
+       "                (k_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "                (v_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "                (q_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "                (out_proj): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "              )\n",
+       "              (layer_norm1): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "              (mlp): CLIPMLP(\n",
+       "                (activation_fn): QuickGELUActivation()\n",
+       "                (fc1): Linear(in_features=1024, out_features=4096, bias=True)\n",
+       "                (fc2): Linear(in_features=4096, out_features=1024, bias=True)\n",
+       "              )\n",
+       "              (layer_norm2): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "            )\n",
+       "          )\n",
+       "        )\n",
+       "        (post_layernorm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+       "      )\n",
+       "      (visual_projection): Linear(in_features=1024, out_features=768, bias=False)\n",
+       "      (text_projection): Linear(in_features=768, out_features=768, bias=False)\n",
+       "    )\n",
+       "    (linear1): Linear(in_features=768, out_features=768, bias=True)\n",
+       "    (activ1): ReLU()\n",
+       "    (linear2): Linear(in_features=768, out_features=512, bias=True)\n",
+       "  )\n",
+       "  (location_encoder): LocationEncoder(\n",
+       "    (LocationEncoderLayer0): LocationEncoderSingleFourierLayer(\n",
+       "      (fourier_encoding): GaussianEncoding()\n",
+       "      (linear1): Linear(in_features=512, out_features=1024, bias=True)\n",
+       "      (activ1): ReLU()\n",
+       "      (linear2): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "      (activ2): ReLU()\n",
+       "      (linear3): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "      (activ3): ReLU()\n",
+       "      (head): Sequential(\n",
+       "        (0): Linear(in_features=1024, out_features=512, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (LocationEncoderLayer1): LocationEncoderSingleFourierLayer(\n",
+       "      (fourier_encoding): GaussianEncoding()\n",
+       "      (linear1): Linear(in_features=512, out_features=1024, bias=True)\n",
+       "      (activ1): ReLU()\n",
+       "      (linear2): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "      (activ2): ReLU()\n",
+       "      (linear3): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "      (activ3): ReLU()\n",
+       "      (head): Sequential(\n",
+       "        (0): Linear(in_features=1024, out_features=512, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (LocationEncoderLayer2): LocationEncoderSingleFourierLayer(\n",
+       "      (fourier_encoding): GaussianEncoding()\n",
+       "      (linear1): Linear(in_features=512, out_features=1024, bias=True)\n",
+       "      (activ1): ReLU()\n",
+       "      (linear2): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "      (activ2): ReLU()\n",
+       "      (linear3): Linear(in_features=1024, out_features=1024, bias=True)\n",
+       "      (activ3): ReLU()\n",
+       "      (head): Sequential(\n",
+       "        (0): Linear(in_features=1024, out_features=512, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (criterion): Contrastive_Loss()\n",
+       ")"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = GeoCLIP(cfg)\n",
     "state_dict = torch.load(cfg.MODEL.CHECKPOINT_PATH, map_location='cpu')\n",
@@ -80,12 +193,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading image paths and coordinates: 4536it [00:00, 26360.81it/s]\n"
+      "Loading image paths and coordinates: 4536it [00:00, 12354.53it/s]\n"
      ]
     }
    ],
    "source": [
-    "dataset = GeoCLIPDataModule(dataset_file=cfg.DATA.EVAL_DATASET_FILE, transform=img_val_transform())\n",
+    "dataset = GeoCLIPDataset(dataset_path=cfg.DATA.EVAL_DATASET_PATH, transform=img_val_transform())\n",
     "\n",
     "val_dataloader = DataLoader(dataset, pin_memory=True, batch_size=cfg.VALIDATION.BATCH_SIZE, shuffle=False, num_workers=cfg.VALIDATION.NUM_WORKERS, persistent_workers=True)"
    ]
@@ -99,7 +212,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|██████████| 284/284 [35:35<00:00,  7.52s/it]\n"
+      "Evaluating: 100%|██████████| 284/284 [05:13<00:00,  1.10s/it]\n"
      ]
     }
    ],
@@ -131,18 +244,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy at 2500 km: 67.77\n",
-      "Accuracy at 750 km: 44.44\n",
-      "Accuracy at 200 km: 21.94\n",
-      "Accuracy at 25 km: 9.08\n",
-      "Accuracy at 1 km: 1.21\n"
+      "Accuracy at 2500 km: 71.83\n",
+      "Accuracy at 750 km: 50.82\n",
+      "Accuracy at 200 km: 27.76\n",
+      "Accuracy at 25 km: 12.41\n",
+      "Accuracy at 1 km: 1.87\n"
      ]
     }
    ],
